--- a/angular/PortalOSK/src/app/customers/customers-list/customers-list.component.html
+++ b/angular/PortalOSK/src/app/customers/customers-list/customers-list.component.html
@@ -1,118 +1,130 @@
-<div class="container ">
-    <div class="card">
-      <div class="card-header text-white bg-dark">
-        <div class="row">
-          <h4 class="pl-4">Kursanci</h4>
-          <div class="ml-auto">
-           <form class="form-inline my-2 my-lg-0" >
-               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-               <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
-             </form>
-         </div>
-        </div>
-        
-      </div>
-      <div class="card-body">
-       <table class="table table-hover">
-         <thead>
-           <tr>
-             <th scope="col">ID</th>
-             <th scope="col">Imie i Nazwisko</th>
-             <th scope="col">Kategoria</th>
-            
-             <th scope="col">Telefon</th>
-             <th scope="col">Saldo</th>
-             <th scope="col">Liczba Godzin</th>
-             <th scope="col">Ostatnia Jazda</th>
-             <th scope="col"></th>
-           </tr>
-         </thead>
-         <tbody>
-           <tr>
-             <th scope="row">1</th>
-             <td>Grzegorz Biś <img src="http://clipart-library.com/images/5iRXRgzRT.png" class="rounded-circle img-thumbnail" style="width: 40px;"></td>
-             <td>C+E</td>
-             <td>698564758</td>
-             <td class="text-warning">-1900,00 PLN</td>
-             <td>12</td>
-             <td>2019-12-07</td>
-             <td><a name="" id="" class="btn btn-outline-primary" href="#" role="button"><i class="fa fa-bars" aria-hidden="true"></i></a>
-             </td>
-           </tr>
-           <tr>
-               <th scope="row">2</th>
-               <td>Grzegorz Biś <img src="http://clipart-library.com/images/5iRXRgzRT.png" class="rounded-circle img-thumbnail" style="width: 40px;"></td>
-               <td>C+E</td>
-               <td>698564758</td>
-               <td class="text-warning">-1900,00 PLN</td>
-               <td>12</td>
-               <td>2019-12-07</td>
-               <td><a name="" id="" class="btn btn-outline-primary" href="#" role="button"><i class="fa fa-bars" aria-hidden="true"></i></a>
-               </td>
-             </tr>
-             <tr>
-                 <th scope="row">3</th>
-                 <td>Grzegorz Biś <img src="http://clipart-library.com/images/5iRXRgzRT.png" class="rounded-circle img-thumbnail" style="width: 40px;"></td>
-                 <td>C+E</td>
-                 <td>698564758</td>
-                 <td class="text-warning">-1900,00 PLN</td>
-                 <td>12</td>
-                 <td>2019-12-07</td>
-                 <td><a name="" id="" class="btn btn-outline-primary" href="#" role="button"><i class="fa fa-bars" aria-hidden="true"></i></a>
-                 </td>
-               </tr>
-               <tr>
-                   <th scope="row">4</th>
-                   <td>Grzegorz Biś <img src="http://clipart-library.com/images/5iRXRgzRT.png" class="rounded-circle img-thumbnail" style="width: 40px;"></td>
-                   <td>C+E</td>
-                   <td>698564758</td>
-                   <td class="text-warning">-1900,00 PLN</td>
-                   <td>12</td>
-                   <td>2019-12-07</td>
-                   <td><a name="" id="" class="btn btn-outline-primary" href="#" role="button"><i class="fa fa-bars" aria-hidden="true"></i></a>
-                   </td>
-                 </tr>
-
-                 <tr>
-                     <th scope="row">5</th>
-                     <td>Grzegorz Biś <img src="http://clipart-library.com/images/5iRXRgzRT.png" class="rounded-circle img-thumbnail" style="width: 40px;"></td>
-                     <td>C+E</td>
-                     <td>698564758</td>
-                     <td class="text-success">0,00 PLN</td>
-                     <td>12</td>
-                     <td>2019-12-07</td>
-                     <td><a name="" id="" class="btn btn-outline-primary" href="#" role="button"><i class="fa fa-bars" aria-hidden="true"></i></a>
-                     </td>
-                   </tr>
-
-                   <tr>
-                       <th scope="row">6</th>
-                       <td>Grzegorz Biś <img src="http://clipart-library.com/images/5iRXRgzRT.png" class="rounded-circle img-thumbnail" style="width: 40px;"></td>
-                       <td>C+E</td>
-                       <td>698564758</td>
-                       <td class="text-warning">-1900,00 PLN</td>
-                       <td>12</td>
-                       <td>2019-12-07</td>
-                       <td><a name="" id="" class="btn btn-outline-primary" href="#" role="button"><i class="fa fa-bars" aria-hidden="true"></i></a>
-                       </td>
-                     </tr>
-         </tbody>
-       </table>
-      </div>
-      <div class="card-footer text-muted">
-       <nav aria-label="Page navigation example">
-         <ul class="pagination justify-content-center">
-           <li class="page-item disabled">
-             <a class="page-link" href="#" tabindex="-1">Previous</a>
-           </li>
-           <li class="page-item"><a class="page-link" href="#">1</a></li>
-           <li class="page-item"><a class="page-link" href="#">2</a></li>
-           <li class="page-item"><a class="page-link" href="#">3</a></li>
-           <li class="page-item">
-             <a class="page-link" href="#">Next</a>
-           </li>
-         </ul>
-       </nav>
-      </div>
+ 
+  
+<div class="card  border-0">
+  <div class="card-header  border-0 text-white bg-dark ">
+      <nav aria-label="breadcrumb ">
+          <ol class="breadcrumb  bg-transparent ">
+            <li class="breadcrumb-item "><a class="text-warning font-size-2"  href="#">Dashboard</a></li>
+            <li class="breadcrumb-item  text-warning active font-size-2 " aria-current="page" >Kursanci</li>
+          </ol>
+        </nav>
+    <div class="row">
+      <h4 class="pl-5 font-size-2-5">Kursanci</h4>
     </div>
-   </div>
+
+  </div>
+  <div class="card-body">
+    <div class="container  ">
+      <div class="desktop-table-container">
+      <app-stats-bar [stats]="stats" class="my-2 position-absolute poz-abs-addon" ></app-stats-bar>
+    </div>
+      <div class="desktop-table-container"> 
+      <div class="card shadow mr-t-7" >
+        <div class="card-body " >
+            <div class="align-right m-3">
+                <form class="form-inline my-2 my-lg-0 pr-4">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-warning my-2 my-sm-0" type="submit">Search</button>
+                </form>
+              </div>
+        
+          <table class="table table-hover ">
+            <thead>
+              <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Imie i Nazwisko</th>
+                <th scope="col">Kategoria</th>
+
+                <th scope="col">Telefon</th>
+                <th scope="col">Saldo</th>
+                <th scope="col">Liczba Godzin</th>
+                <th scope="col">Ostatnia Jazda</th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let customer of customers">
+                <th scope="row">{{customer.id}}</th>
+                <td><img [src]="customer.avatarUri"
+                  class="rounded-circle img-thumbnail" style="width: 40px;">{{"  "+ customer.firstName + " " + customer.lastName}}</td>
+                <td>C+E</td>
+                <td>{{customer.mobileNumber}}</td>
+                <td class="text-warning">{{customer.userAccountBalance + " PLN"}}</td>
+                <td>{{customer.lessonsCount}}</td>
+                <td>{{formatDate(customer.lastLessonDate)}}</td>
+                <td><a name="" id="" class="btn btn-outline-secondary" href="#" role="button"><i class="fa fa-bars"
+                      aria-hidden="true"></i></a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="card-footer text-muted">
+          <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+              <li class="page-item disabled">
+                <a class="page-link text-light bg-dark" href="#" tabindex="-1">Previous</a>
+              </li>
+              <li class="page-item "><a class="page-link text-light bg-dark" href="#">1</a></li>
+              <li class="page-item"><a class="page-link text-light bg-dark" href="#">2</a></li>
+              <li class="page-item"><a class="page-link text-light bg-dark" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link text-light bg-dark" href="#">Next</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>   
+      </div>
+
+      <div class="mobile-table-container"> 
+          <div class="card shadow " >
+              <div class="card-body " >
+                  <div class="align-right m-3">
+                      <form class="form-inline my-2 my-lg-0 pr-4">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                       
+                      </form>
+                    </div>
+          <div class="table-responsive-sm">
+              <table class="table">
+                  <thead>
+                      <tr>
+                        <th scope="col-md-aut ">Imie i Nazwisko</th>
+                        <th scope="col-md-aut">Kategoria</th>
+                        <th scope="col-md-aut">Saldo</th>
+                      </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr *ngFor="let customer of customers">
+                          <td><img [src]="customer.avatarUri"
+                            class="rounded-circle img-thumbnail" style="width: 30px;"><br>{{"  "+ customer.firstName + " " + customer.lastName}}</td>
+                          <td>C+E</td>
+                          <td class="text-warning">{{customer.userAccountBalance}}</td>
+                        </tr>
+                      </tbody>
+               
+              </table>
+            </div>
+            </div>
+        
+          <div class="card-footer text-muted">
+            <nav aria-label="Page navigation example">
+              <ul class="pagination justify-content-center">
+                <li class="page-item disabled">
+                  <a class="page-link text-light bg-dark" href="#" tabindex="-1">Previous</a>
+                </li>
+                <li class="page-item "><a class="page-link text-light bg-dark" href="#">1</a></li>
+                <li class="page-item"><a class="page-link text-light bg-dark" href="#">2</a></li>
+                <li class="page-item"><a class="page-link text-light bg-dark" href="#">3</a></li>
+                <li class="page-item">
+                  <a class="page-link text-light bg-dark" href="#">Next</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        </div>   
+        </div>
+  </div>
