--- a/angular/PortalOSK/src/styles.scss
+++ b/angular/PortalOSK/src/styles.scss
@@ -41,3 +41,66 @@ body {
   opacity: .5;
 
 }
+
+.font-size-3{
+  font-size: 3rem;
+}
+.font-size-2-5{
+  font-size: 1.5rem;
+  @media screen and (min-width: 600px){
+    font-size: 2.5rem;
+    
+  }
+}
+.font-size-2{
+  font-size: 0.9rem;
+  @media screen and (min-width: 600px){
+    font-size: 1.2rem;
+    
+  }
+}
+
+.mr-t-7{
+  margin-top:7rem;
+}
+
+.poz-abs-addon{
+  top:1rem;
+   left:0; 
+   right: 0;
+}
+
+.desktop-table-container{
+  display: none;
+  @media screen and (min-width: 1100px){
+ display: inherit;
+  }
+
+}
+
+.mobile-table-container{
+  display: inherit;
+  @media screen and (min-width: 1100px){
+  display: none;
+  }
+}
+.stats-item-box{
+  @media screen and (min-width: 1400px){
+    font-size: 3rem;
+    width: 10rem;
+  }
+  @media screen and (min-width: 800px){
+    max-width: 500px;
+    font-size: 2rem;
+    
+  }
+
+  @media screen and (min-width: 1100px){
+    max-width: 700px;
+  }
+  font-size: 1.5rem;
+  max-width: 700px;
+  width: 10rem;
+
+ 
+}
