--- a/angular/PortalOSK/src/app/customers/customer-dashboard/customer-dashboard.component.html
+++ b/angular/PortalOSK/src/app/customers/customer-dashboard/customer-dashboard.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-<div class="row mt-5">
+<!-- <div class="row mt-5">
         <div class="col-8 border">
-  <app-bar-chart></app-bar-chart>
-        </div>
+         </div>
         <div class="col-4 border">
           <div class="card">
             
@@ -28,5 +27,23 @@
                   <button type="button" class="btn btn-secondary m-1 w-100">Umów Jazdę</button>
                   <button type="button" class="btn btn-outline-secondary m-1 w-100">Zapłać za kurs</button>              </div>
           </div>
+        </div> -->
+        <div class="row">
+
+          <div class="col">
+                       
+              <div class="card-deck mt-5">
+           
+                  <div class="container-fluid">
+                      <h3 class="text-uppercase">Twoje Kursy</h3>
+                      <div class="row">
+                    
+                        <div class="col shadow bg-gradient-secondary text-white m-2 "> <app-product-card ></app-product-card></div>
+                        <div class="col shadow m-2 bg-gradient-secondary text-white m-2"> <app-product-card></app-product-card></div>
+                      </div>
+                    </div>
+             
+            </div>
+          </div>
+
         </div>
-    </div>
