kalendarz - wido miesiaca -draft

--- a/angular/PortalOSK/src/app/calendar/org-calendar/org-calendar.component.html
+++ b/angular/PortalOSK/src/app/calendar/org-calendar/org-calendar.component.html
@@ -1,1 +1,256 @@
-<p>org-calendar works!</p>
+<div class="container-fluid calendar-popup bg-gradient-secondary text-white">
+  <div class="row">
+    <div class="col">
+      <h2 class="m-2">Kalendarz - Grzegorz Biś</h2>
+    </div>
+    <div class="col text-right">
+      <h2 class="m-2"> Sierpień 2019</h2>
+    </div>
+  </div>
+
+  <hr class="mx-2">
+  <div class="container mx-2">
+    <div class="row">
+      <table class="table table-hover table-inverse ">
+        <thead class="thead-inverse">
+          <tr class="text-white">
+            <th class="cal-grid-heading">Pon</th>
+            <th class="cal-grid-heading">Wto</th>
+            <th class="cal-grid-heading">Śro</th>
+            <th class="cal-grid-heading">Czw</th>
+            <th class="cal-grid-heading">Pią</th>
+            <th class="cal-grid-heading">Sob</th>
+            <th class="cal-grid-heading">Nie</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td scope="row" class="cal-grid-cell-month  align-middle ">
+              <div class="row">
+                <div class="col">29</div>
+                <div class="col text-right"><i class="fa fa-plus" aria-hidden="true"></i></div>
+              </div>
+              <div class="progress bg-success my-3">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <p class="card-text"><small class="text-white">Wolne godziny: 7</small></p>
+            </td>
+            <td class="cal-grid-cell-month ">30
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">31
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">1
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">2
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">3
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">4
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="10"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td scope="row" class="cal-grid-cell-month">5
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">6
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">7
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">8
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">9
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">10
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">11
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td scope="row" class="cal-grid-cell-month">12
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">13
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">14
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">15
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">16
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">17
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">18
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td scope="row" class="cal-grid-cell-month">19
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">20
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">21
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">22
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">23
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">24
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">25
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:80%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td scope="row" class="cal-grid-cell-month">26
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:100%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">27
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:98%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">28
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:100%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">29
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:65%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">30
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:100%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">31 <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:0%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+            <td class="cal-grid-cell-month">1
+              <div class="progress bg-success my-5">
+                <div class="progress-bar bg-danger" role="progressbar" style="width:100%" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
+</div>
